# Type2Learn

./: .gitignore  OneDocs_release.yml  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
public/styles/: main.css
public/words/: CET-6.xlsx
src/: app.ts  main.ts  router.ts  store.ts  theme.ts  word-service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/pages/: custom-practice.ts  custom.ts  home.ts  poetry-practice.ts  poetry.ts  settings.ts  words-practice.ts  words.ts
